<resources>
    <string name="app_name">i-RateRestaurantApp</string>
    <string name="restaurant_name">Restaurant name</string>
    <string name="restaurant_type">Restaurant type</string>
    <string name="date_and_time_of_visit">Date and time of visit</string>
    <string name="average_meal_price_per_person">Average meal price per person</string>
    <string name="service_rating">Service rating</string>
    <string name="cleanliness_rating">Cleanliness rating</string>
    <string name="food_quality_rating">Food quality rating</string>
    <string name="notes">Notes</string>
    <string name="name_of_the_reporter">Name of the reporter</string>
    <string name="add">Add</string>
    <string name="rating_list">Rating List</string>
    <string name="update">Update</string>
    <string name="pick_date_and_time">dd/mm/yyyy ——:——</string>
    <string name="search_here">Search Here</string>
    <string name="search">Search</string>
    <string name="restaurant_name_title">Restaurant Name:</string>
    <string name="reporter_name">Reporter Name:</string>
    <string name="notes_title">Notes :</string>
    <string name="restaurant_type_title">Restaurant Type : </string>
    <string name="date_time_visit">Date Time Visit :</string>
    <string name="service_rating_title">Service Rating :</string>
    <string name="cleanliness_rating_title">Cleanliness Rating :</string>
    <string name="foodquality_rating">FoodQuality Rating :</string>
    <string name="warrning">Input Not Empty </string>
    <string name="message_complete">Add Complete !</string>
    <string name="average_price">Average price:</string>
    <string name="option">Option</string>
    <string name="delete">Delete</string>
    <string name="update_item">Update</string>
    <string name="empty_string" />
    <string name="message_delete_success">Delete Complete !</string>
    <string name="update_success">Update Complete !</string>
    <string name="menu">Menu</string>
    <string name="add_screen">Add Screen</string>
    <string name="list_screen">List Screen</string>
</resources>