<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:text="@string/option"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:background="@color/pink"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize" />
    <LinearLayout
        android:id="@+id/addLayout"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@color/pink2"
        android:layout_height="wrap_content"
        android:padding="50dp"
        android:gravity="center">
        <Button
            android:id="@+id/btnUpdateItem"
            android:textColor="@color/white"
            android:layout_width="150dp"
            android:textSize="22sp"
            android:layout_height="wrap_content"
            android:text="@string/update_item"
            android:textAllCaps="false"
            android:layout_marginHorizontal="20dp"
            />

        <Button
            android:id="@+id/btnDeleteItem"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:text="@string/delete"
            android:layout_marginHorizontal="20dp"
            />
    </LinearLayout>
</LinearLayout>